src/tests/evaluator_error/type_mismatch_integer_infix_expression/snapshots/monkey_interpreter__tests__evaluator_error__type_mismatch_integer_infix_expression__test_type_mismatch_integer_infix_expression_case_10_lexical_analysis.snap
---
source: src/tests/evaluator_error/type_mismatch_integer_infix_expression/mod.rs
expression: tokens
---
[
    String {
        literal: " 123",
    },
    Minus,
    Integer {
        literal: 10,
    },
    EndOfFile,
]
